fixed extra space error in elite dangerous loader

--- a/elite-dangerous-loader/styles.scss
+++ b/elite-dangerous-loader/styles.scss
@@ -2,9 +2,15 @@ $color: #fd7000;
 $size: 12px;
 $time: 1;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
